# cmake-find-python-windows-bug

./: CMakeLists.txt
.github/workflows/: build.yml
